<resources>
    <string name="app_name">Been There , Done That!</string>
    <string name="help">Help Screen</string>
    <string name="menu">Main Menu</string>
    <string name="settings">Settings Screen</string>
    <string name="game">Game Screen</string>
    <string name="scores">Scores Screen</string>
    <string name="app_logo_top">BEEN THERE</string>
    <string name="app_logo_bottom">DONE THAT!</string>
    <string name="app_version_info">Version 2.0.0\nCopyright © 2011 Mamlambo\nAllRights Reserved.</string>
    <string name="header_left_image_desc">Left header image</string>
    <string name="header_right_image_desc">Right header image</string>
    <string name="footer_image_desc">Footer image</string>


    <string name="menu_item_play">Play Game</string>
    <string name="menu_item_scores">View Scores</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>


</resources>


