<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewTopTitle"
        android:text="@string/app_logo_top"
        android:textColor="@color/logo_color"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/logo_size" />

    <TableLayout
        android:id="@+id/TableLayout01"
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/ImageView2_Left"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/splash1" />

            <ImageView
                android:id="@+id/ImageView2_Right"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/splash2" />
        </TableRow>

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/ImageView3_Left"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/splash3" />

            <ImageView
                android:id="@+id/ImageView3_Right"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:src="@drawable/splash4" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextViewBottomTitle"
        android:text="@string/app_logo_bottom"
        android:textColor="@color/logo_color"
        android:gravity="center"
        android:textSize="@dimen/logo_size" />

    <TextView
        android:id="@+id/TextViewBottomVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version_info"
        android:textSize="@dimen/version_size"
        android:textColor="@color/version_color"
        android:background="@color/version_bkgrd"
        android:lineSpacingExtra="@dimen/version_spacing"
        android:layout_gravity="center"
        android:gravity="center" />
</LinearLayout>
